--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
 svg {
   background: #eee;
   overflow: visible;
-  margin-bottom: 2rem;
   display: block;
+  width: 100%;
 }
 
 #root {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   height: 100vh;
+  padding: 0 50px;
 }
 
 button {
