--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 svg {
-  overflow: visible;
   display: block;
   width: 100%;
-  height: 250px;
-  background: #eee;
+  height: 500px;
+}
+
+svg .state:hover {
+  stroke: black;
+  stroke-width: 1px;
+  cursor: pointer;
 }
 
 #root {
