--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,17 @@ svg {
   display: block;
   width: 100%;
   height: 300px;
+  background: #f7f7f7;
+  overflow: visible;
 }
 
-svg .country:hover {
-  stroke: black;
-  stroke-width: 1px;
-  cursor: pointer;
+svg rect.selection {
+  stroke: none;
+}
+
+table {
+  height: 200px;
+  background: #eee;
 }
 
 #root {
