--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 svg {
   display: block;
   width: 100%;
-  height: 300px;
+  height: 200px;
   background: #f7f7f7;
   overflow: visible;
 }
@@ -16,6 +16,8 @@ table {
 }
 
 #root {
+  max-width: 600px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: stretch;
