--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,13 @@
 svg {
   display: block;
   width: 100%;
-  height: 200px;
+  height: 300px;
   background: #f7f7f7;
   overflow: visible;
 }
 
 svg rect.selection {
   stroke: none;
-}
-
-table {
-  height: 200px;
-  background: #eee;
 }
 
 #root {
@@ -41,4 +36,13 @@ video {
   right: 0;
   top: auto;
   width: 100%;
+}
+
+.field {
+  display: inline-block;
+  margin: 0 0.5em;
+}
+
+.field input {
+  margin-right: 0.5em;
 }
